--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -6,14 +6,9 @@
       <ion-label>Crear</ion-label>
     </ion-tab-button>
     
-    <ion-tab-button tab="productos">
+    <ion-tab-button tab="ordenes">
       <ion-icon name="briefcase-outline"></ion-icon>
-      <ion-label>Ventas activas</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="catalogos">
-      <ion-icon name="file-tray-stacked-outline"></ion-icon>
-      <ion-label>Ventas Finalizadas</ion-label>
+      <ion-label>Tikets creados</ion-label>
     </ion-tab-button>
     
     <!--<ion-tab-button tab="ordenes">
