--- a/src/app/form/formordenes/formordenes.page.html
+++ b/src/app/form/formordenes/formordenes.page.html
@@ -6,7 +6,7 @@
     </ion-button>
     <ion-text>
       <ion-label>
-        {{ titulo }} Ordenes
+        {{ titulo }} Tikets
       </ion-label>
     </ion-text>
     <ion-button fill="clear" slot="end" (click)="agregar()" [disabled]="btnDisabled" *ngIf="!evento">
@@ -36,10 +36,7 @@
                     [ngClass]="{
                       'estProceso':data.estado === 0,
                       'estCompletado':data.estado === 1,
-                      'estEliminado':data.estado === 2,
-                      'estCancelado':data.estado === 3,
-                      'estNovedad':data.estado === 4,
-                      'estEnviando':data.estado === 5
+                      'estEliminado':data.estado === 2
                     }"
                   >
                     {{ data.estadoName }}
@@ -48,14 +45,6 @@
               </ion-col>
             </ion-row>
           </ion-grid>
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label position="floating">ID Numero de guia</ion-label>
-          <ion-input [(ngModel)]="data.idRemesa" [disabled]="true" type="text"></ion-input>  
-        </ion-item>
-        <ion-item lines="none">
-          <ion-label position="floating">Empresa Transportado</ion-label>
-          <ion-input [(ngModel)]="data.empresaTrans" [disabled]="true" type="text"></ion-input>  
         </ion-item>
       </ion-list>
     </ion-item>
@@ -66,37 +55,25 @@
         </ion-label>
       </ion-toolbar>
     </ion-item>
-    <ion-item>
+    <ion-item *ngIf="!data.mesa">
         <ion-label position="floating">Nombre Cliente</ion-label>
-        <ion-input [(ngModel)]="data.cliente.nombreCliente" type="text"></ion-input>
+        <ion-input [(ngModel)]="data.cliente" type="text"></ion-input>
     </ion-item>
-    <ion-item>
-        <ion-label position="floating">Cedula del cliente</ion-label>
-        <ion-input [(ngModel)]="data.cliente.cedulaCliente" type="text"></ion-input>
+    <ion-item *ngIf="data.mesa">
+      <ion-label position="floating">Numero de Mesa</ion-label>
+      <ion-input autofocus [(ngModel)]="data.cliente" type="text"></ion-input>
     </ion-item>
-    <ion-item>
-        <ion-label position="floating">Telefono del cliente</ion-label>
-        <ion-input [(ngModel)]="data.cliente.celularCliente" type="text"></ion-input>
+    <ion-item *ngIf="data.domicilio">
+      <ion-label position="floating">Direccion Cliente</ion-label>
+      <ion-input autofocus [(ngModel)]="data.direccionCliente" type="text"></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Email del cliente</ion-label>
-      <ion-input [(ngModel)]="data.cliente.emailCliente" type="text"></ion-input>
-  </ion-item>
+    <ion-item *ngIf="data.domicilio">
+      <ion-label position="floating">Celular Cliente</ion-label>
+      <ion-input autofocus [(ngModel)]="data.celularCliente" type="text"></ion-input>
+    </ion-item>
     <ion-item>
         <ion-label position="floating">Fecha de Pedido</ion-label>
-        <ion-datetime placeholder="fecha de la orden" [(ngModel)]="data.factura.fecha_pedido"></ion-datetime>
-    </ion-item>
-    <ion-item>
-        <ion-label position="floating">Ciudad del Cliente</ion-label>
-        <ion-input [(ngModel)]="data.cliente.ciudadCliente" type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label position="floating">Direccion del Cliente</ion-label>
-        <ion-input [(ngModel)]="data.cliente.direccionCliente" type="text"></ion-input>
-    </ion-item>
-    <ion-item> 
-      <ion-label position="floating">Barrio del Cliente</ion-label>
-      <ion-input [(ngModel)]="data.cliente.barrioCliente" type="text"></ion-input>
+        <ion-datetime placeholder="fecha de la orden" [(ngModel)]="data.createdAt"></ion-datetime>
     </ion-item>
     <ion-item> 
       <ion-label position="floating">Detalles</ion-label>
@@ -115,16 +92,10 @@
     <ion-item lines="none">
       <ion-list>
         <ion-item *ngFor="let item of data.articulo; let idx=index" lines="none">
-            <ion-avatar slot="start">
-              <img [src]="( ( item.files[0] | imagen ) || 'https://hostel.keralauniversity.ac.in/images/NoImage.jpg' )">
-            </ion-avatar>
             <ion-label>
               <h2>{{ item.titulo }}</h2>
               <h3>Cantidad: {{ item.cantidadAduiridad || 1 }}</h3>
               <p>Precio: {{ _tools.monedaChange( 3, 2, ( item.precioOferta || item.precioVenta || 0 ) ) }}</p>
-              <p>Comision: {{ _tools.monedaChange( 3,2, ( item.precioOferta || item.precioVenta || 0 ) * ( item.comision || 10 ) / 100 ) }}</p>
-              <p *ngIf="item.tallaSelect">Talla: {{ item.tallaSelect }}</p>
-              <p *ngIf="item.colorSelect">Color: {{ item.colorSelect }}</p>
             </ion-label>
             <ion-button fill="clear" color="danger" (click)="deleteCart( idx, item )" slot="end" *ngIf="!evento">
               <ion-icon name="close-circle-outline"></ion-icon>
@@ -141,12 +112,6 @@
       <ion-text color="success">
         <span>Total:</span>
         <span class="colorBlack">{{ _tools.monedaChange( 3, 2, ( data.total || 0 ) ) }}</span>
-      </ion-text>
-    </ion-item>
-    <ion-item slot="end" lines="none">
-      <ion-text color="success">
-        <span>Comision:</span>
-        <span class="colorBlack">{{ _tools.monedaChange( 3, 2, ( data.ganancias || 0 ) ) }}</span>
       </ion-text>
     </ion-item>
   </ion-list>
