--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,12 @@
 .check{
     --background: #caffdf;
 }
+
+.colorNegro{
+    color: black !important;
+}
+
+.footerFinal{
+    --background: #7efbaf !important;
+    padding-left: 15px !important;
+}
