--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -11,12 +11,12 @@
       <ion-label>Tikets creados</ion-label>
     </ion-tab-button>
     
-    <!--<ion-tab-button tab="ordenes">
+    <ion-tab-button tab="resumen" *ngIf="rolUser == 'cajera'">
       <ion-icon name="cart-outline"></ion-icon>
-      <ion-label>Ordenes</ion-label>
+      <ion-label>Resumen Venta</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="perfil">
+    <!--<ion-tab-button tab="perfil">
       <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Perfil</ion-label>
     </ion-tab-button>
