--- a/src/app/pages/ordenes/ordenes.page.html
+++ b/src/app/pages/ordenes/ordenes.page.html
@@ -47,10 +47,9 @@
         </ion-avatar>
         <ion-label (click)="agregar(item)">
           
-          <h3>Cliente {{ item['idCliente']?.nombre }}</h3>
+          <h3>Cliente {{ item.cliente }}</h3>
           <h4>Precio Total {{ _tools.monedaChange( 3, 2, item.precio || 0 ) }}</h4>
-          <h4>Ganancias {{ _tools.monedaChange( 3, 2, item.comision || 0 ) }}</h4>
-          <p>{{ item.createdAt | date:'medium' }}</p>
+          <p>{{ item.create }}</p>
         </ion-label>
   
       </ion-item>
