--- a/src/app/form/formordenes/formordenes.page.html
+++ b/src/app/form/formordenes/formordenes.page.html
@@ -33,6 +33,7 @@
               <ion-col size="12">
                 <div class="ion-text-center">
                   <ion-button 
+                    class="colorBlack"
                     [ngClass]="{
                       'estProceso':data.estado === 0,
                       'estCompletado':data.estado === 1,
