--- a/src/app/pages/resumen/resumen.page.html
+++ b/src/app/pages/resumen/resumen.page.html
@@ -4,7 +4,7 @@
     <ion-button slot="end" color="primary" (click)="getResumen()">
       <ion-icon name="reload-outline"></ion-icon>
     </ion-button>
-    <ion-button slot="end" color="primary">Imprimir</ion-button>
+    <ion-button slot="end" color="primary" (click)="imprimir()">Imprimir</ion-button>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +12,7 @@
   <ion-list *ngIf="listRow.pizzas">
     <ion-item>
       <ion-text color="primary">
-        <label for="">Pizzas Resumen: </label>
+        <label for="">Pizzas Porcion Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorPizzas || 0 ) }}</label>
       </ion-text>
     </ion-item>
     <ion-item *ngFor="let item of listRow.pizzas" lines="none">
@@ -33,7 +33,70 @@
     </ion-item>
     <ion-item>
       <ion-text color="primary">
-        <label for="">Gaceosa Resumen: </label>
+        <label for="">Pizzas Grande Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorPizzasGrande || 0 ) }}</label>
+      </ion-text>
+    </ion-item>
+    <ion-item *ngFor="let item of listRow.pizzasGrande" lines="none">
+      <ion-label>
+        <ion-text color="dark" slot="start">
+          <label>Producto: </label>
+          <span> {{ item.titulo | slice: 0: 300 }} </span>
+        </ion-text><br>
+        <ion-text color="medium">
+          <label>Cantidad: </label>
+          <span> {{ item.cantidad }} </span>
+        </ion-text><br>
+        <ion-text color="dark">
+          <label>Total: </label>
+          <span> {{ _tools.monedaChange( 3, 2, item.precioTotal || 0 ) }} </span>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-text color="primary">
+        <label for="">Pizzas Mediana Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorPizzasMediana || 0 ) }}</label>
+      </ion-text>
+    </ion-item>
+    <ion-item *ngFor="let item of listRow.pizzasMediana" lines="none">
+      <ion-label>
+        <ion-text color="dark" slot="start">
+          <label>Producto: </label>
+          <span> {{ item.titulo | slice: 0: 300 }} </span>
+        </ion-text><br>
+        <ion-text color="medium">
+          <label>Cantidad: </label>
+          <span> {{ item.cantidad }} </span>
+        </ion-text><br>
+        <ion-text color="dark">
+          <label>Total: </label>
+          <span> {{ _tools.monedaChange( 3, 2, item.precioTotal || 0 ) }} </span>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-text color="primary">
+        <label for="">Pizzetas Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorPizzetas || 0 ) }}</label>
+      </ion-text>
+    </ion-item>
+    <ion-item *ngFor="let item of listRow.pizzeta" lines="none">
+      <ion-label>
+        <ion-text color="dark" slot="start">
+          <label>Producto: </label>
+          <span> {{ item.titulo | slice: 0: 300 }} </span>
+        </ion-text><br>
+        <ion-text color="medium">
+          <label>Cantidad: </label>
+          <span> {{ item.cantidad }} </span>
+        </ion-text><br>
+        <ion-text color="dark">
+          <label>Total: </label>
+          <span> {{ _tools.monedaChange( 3, 2, item.precioTotal || 0 ) }} </span>
+        </ion-text>
+      </ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-text color="primary">
+        <label for="">Gaceosa Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorGaceosa || 0 ) }}</label>
       </ion-text>
     </ion-item>
     <ion-item *ngFor="let item of listRow.gaceosas" lines="none">
@@ -54,7 +117,7 @@
     </ion-item>
     <ion-item>
       <ion-text color="primary">
-        <label for="">Lasaña Resumen: </label>
+        <label for="">Lasaña Resumen: &nbsp; {{ _tools.monedaChange( 3, 2, listRow.valorlasana || 0 ) }}</label>
       </ion-text>
     </ion-item>
     <ion-item *ngFor="let item of listRow.lasana" lines="none">
@@ -77,7 +140,7 @@
       <ion-label>
         <ion-text color="dark" slot="start">
           <label for="">Precio Total Pizzas: </label>
-          <span class="colorNegro">{{ _tools.monedaChange( 3, 2, listRow.valorPizzas || 0 ) }}</span>
+          <span class="colorNegro">{{ _tools.monedaChange( 3, 2, listRow.valorPizzas + listRow.valorPizzasGrande + listRow.valorPizzasMediana + listRow.valorPizzetas || 0 ) }}</span>
         </ion-text><br><br>
         <ion-text color="dark">
           <label for="">Precio Total Gaceosa: </label>
